# c-chat

./: CMakeLists.txt  README.md  client.c  main.c  server.c
client/: CMakeLists.txt  client.c  main.c
client/include/: crypto.h  network.h  packet.h  server_errors.h
client/src/: crypto.c  network.c  server_errors.c
server/: CMakeLists.txt  main.c
server/include/: client.h  connection.h  crypto.h  network.h  packet.h  server.h
server/src/: client.c  connection.c  crypto.c  network.c  server.c
